tests/snapshots/errors/builtin_push_type_error.mc
// Test: calling push on a fixed array (which doesn't have the method)
let arr: array<int> = [1, 2, 3];
arr.push(4);
